# akua

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  Taskfile.yml  package.json  renovate.json  tsconfig.json
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: ci.yml  cli-release.yml  native-release.yml  pages.yml  playground-deploy.yml  release.yml  sdk-publish.yml  sdk-release.yml
.task/checksum/: build-render-worker  sdk-install
crates/akua-cli/: Cargo.toml  build.rs
crates/akua-cli/src/: lib.rs  main.rs  observability.rs  render_worker.rs  test_helpers.rs
crates/akua-cli/src/contract/: args.rs  context.rs  emit.rs  mod.rs
crates/akua-cli/src/verbs/: add.rs  auth.rs  cache.rs  check.rs  dev.rs  diff.rs  export.rs  fmt.rs  init.rs  inspect.rs  lint.rs  lock.rs  mod.rs  pack.rs  publish.rs  pull.rs  push.rs  remove.rs  render.rs  repl.rs  sign.rs  test.rs  tree.rs  update.rs  vendor.rs  verify.rs  verify_tarball.rs  version.rs  whoami.rs
crates/akua-cli/tests/: cli_integration.rs  examples_export.rs  examples_hello_webapp.rs  examples_helm_hello.rs  examples_install_as_package.rs  examples_kcl_ecosystem.rs  examples_kustomize_hello.rs  examples_pkg_compose.rs  export_sdk_bundle.rs  sandbox_adversarial.rs  sandbox_nested_wasmtime.rs
crates/akua-core/: Cargo.toml
crates/akua-core/src/: attest.rs  cache_inventory.rs  chart_resolver.rs  check.rs  cosign.rs  cosign_sidecar.rs  dev.rs  diff.rs  dir_diff.rs  duration_parse.rs  engine.rs  export.rs  fetch.rs  git_fetcher.rs  hash.rs  helm.rs  hex.rs  kcl_plugin.rs  kustomize.rs  lib.rs  lock_file.rs  manifest.rs  metadata.rs  mod_file.rs  oci_auth.rs  oci_fetcher.rs  oci_puller.rs  oci_pusher.rs  oci_transport.rs  package_k.rs  package_render.rs  package_tar.rs  pkg_render.rs  pkg_stub.rs  publish.rs  render.rs  schema.rs  slsa.rs  source.rs  ssrf.rs  (+9 more)
crates/akua-core/src/cli_contract/: agent.rs  codes.rs  error.rs  exit.rs  mod.rs
crates/akua-core/src/engine/: helm.rs  helmfile.rs  kcl.rs  mod.rs
crates/akua-core/src/fetch/: cache.rs  digest.rs  hex.rs  http_helm.rs  mod.rs  oci.rs  options.rs  ssrf_client.rs  streaming.rs  tar_unpack.rs
crates/akua-core/stdlib/akua/: ctx.k  helm.k  kustomize.k  pkg.k
crates/akua-core/tests/: examples_hello_webapp.rs  examples_helm_hello.rs  examples_kustomize_hello.rs  examples_pkg_compose.rs  mod_lock_examples.rs  oci_fetch_integration.rs  real_world_charts.rs  vendor_roundtrip.rs
crates/akua-napi/: Cargo.toml  build.rs  index.d.ts  index.js  loader.js  package.json
crates/akua-napi/npm/darwin-arm64/: README.md  package.json
crates/akua-napi/npm/darwin-x64/: README.md  package.json
crates/akua-napi/npm/linux-arm64-gnu/: README.md  package.json
crates/akua-napi/npm/linux-arm64-musl/: README.md  package.json
crates/akua-napi/npm/linux-x64-gnu/: README.md  package.json
crates/akua-napi/npm/linux-x64-musl/: README.md  package.json
crates/akua-napi/npm/win32-x64-msvc/: README.md  package.json
crates/akua-napi/src/: lib.rs
crates/akua-native-engines-npm/: .gitignore  index.js  package.json
crates/akua-render-worker/: Cargo.toml
crates/akua-render-worker/src/: main.rs  observability.rs
crates/akua-wasm/: Cargo.toml  smoke.mjs
crates/akua-wasm/src/: lib.rs
crates/engine-host-wasm/: Cargo.toml
crates/engine-host-wasm/src/: lib.rs
crates/helm-engine-wasm/: Cargo.toml  README.md  build.rs
crates/helm-engine-wasm/fork/: README.md  apply.sh  helm-v4.1.4.patch
crates/helm-engine-wasm/go-src/: go.mod  main.go
crates/helm-engine-wasm/src/: lib.rs
crates/kustomize-engine-wasm/: Cargo.toml  build.rs
crates/kustomize-engine-wasm/go-src/: go.mod  main.go
crates/kustomize-engine-wasm/src/: lib.rs
crates/source-hash/: Cargo.toml
crates/source-hash/src/: lib.rs  main.rs
docs/: agent-usage.md  architecture.md  cli-contract.md  cli.md  debugging.md  design-notes.md  design-package-yaml-research.md  design-package-yaml-v1.md  embedded-engines.md  getting-started.md  hero-diff.tape  hero.tape  impl-plan.md  krm-vocabulary.md  lockfile-format.md  package-format.md  performance.md  policy-format.md  roadmap.md  sdk-runtime-compat.md  sdk.md  security-model.md  security.md  spec-markers.md  use-cases.md  vision.md
docs/errors/: E_PATH_ESCAPE.md
docs/examples/: README.md
docs/spikes/: engines-on-wasm32-unknown-unknown.md  kcl-wasm-feasibility.md  pkg-render-import-method.md  pkg-render-nested-sandbox.md  wasmtime-multi-engine.md
examples/: README.md
examples/00-helm-hello/: README.md  akua.toml  inputs.example.yaml  package.k
examples/01-hello-webapp/: README.md  akua.mod  akua.sum  akua.toml  inputs.yaml  package.k
examples/02-webapp-postgres/: README.md  akua.mod  akua.sum  akua.toml  inputs.yaml  package.k  test_package.k
examples/03-multi-env-app/: README.md  akua.mod  akua.sum  akua.toml
examples/04-policy-tier/: README.md  akua.mod  akua.sum  akua.toml  policy-set.k
examples/05-tests-and-golden/: README.md  akua.mod  akua.sum  package.k  test_package.k
examples/06-multi-engine/: README.md  akua.sum  akua.toml  inputs.yaml  package.k
examples/07-package-reuse/: README.md  akua.mod  akua.sum  akua.toml  inputs.yaml  package.k
examples/08-pkg-compose/: README.md  akua.toml  inputs.example.yaml  package.k
examples/09-kustomize-hello/: README.md  akua.toml  package.k
examples/10-kcl-ecosystem/: akua.toml  inputs.example.yaml  package.k
examples/11-install-as-package/: README.md  akua.toml  inputs.example.yaml  package.k
examples/hello-package/: README.md  package.yaml  values.schema.json
examples/helmfile-package/: README.md  helmfile.yaml  package.yaml
examples/hybrid-package/: README.md  package.yaml  site-config.k
examples/kcl-package/: README.md  app.k  package.yaml
schemas/: package.schema.json  values-input.schema.json
scripts/: Dockerfile  install.ps1  install.sh
sdk-schemas/: Level.json  StructuredError.json  akua.json
site/: index.html
skills/: README.md
skills/apply-policy-tier/: SKILL.md
(+60 files in other folders)
