[workspace]
resolver = "2"
members = [
	"crates/akua-core",
	"crates/akua-cli",
	"crates/akua-render-worker",
	"crates/engine-host-wasm",
	"crates/helm-engine-wasm",
	"crates/kustomize-engine-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cnap-tech/akua"
authors = ["CNAP Tech <hello@cnap.tech>"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "serde_yml", version = "0.0.12" }
toml = "0.8"

# Error handling
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.ci-release]
inherits = "release"
lto = false
codegen-units = 16
strip = "symbols"
debug = "line-tables-only"
incremental = false
