[workspace]
resolver = "2"
members = [
	"crates/akua-core",
	"crates/akua-cli",
	"crates/akua-napi",
	"crates/akua-render-worker",
	"crates/engine-host-wasm",
	"crates/helm-engine-wasm",
	"crates/kustomize-engine-wasm",
	"crates/source-hash",
]

[workspace.package]
version = "0.8.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cnap-tech/akua"
authors = ["CNAP Tech <hello@cnap.tech>"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "serde_yml", version = "0.0.12" }
toml = "1.0"

# Error handling
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Observability — tracing is the universal emitter (libraries depend on it
# only); tracing-subscriber + the opentelemetry stack live in the host (cli).
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "env-filter", "ansi", "registry"] }
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }

# Patch kcl-driver to cfg-guard its `std::env::current_dir()` call on
# wasm32 — unblocks Phase 4's per-render wasmtime sandbox for every
# kcl-derived crate in the workspace. Single-line fix lives on the
# `akua-wasm32` branch of cnap-tech/kcl; upstream PR in flight.
# Remove this block once the fix merges upstream.
[patch."https://github.com/kcl-lang/kcl"]
kcl-api = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-ast = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-ast-pretty = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-config = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-driver = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-error = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-evaluator = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-language-server = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-lexer = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-loader = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-parser = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-primitives = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-query = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-runner = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-runtime = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-sema = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-span = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-tools = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-utils = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }
kcl-version = { git = "https://github.com/cnap-tech/kcl", branch = "akua-wasm32" }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.ci-release]
inherits = "release"
lto = false
codegen-units = 16
strip = "symbols"
debug = "line-tables-only"
incremental = false
