[package]
name = "akua-cli"
description = "Akua command-line tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "akua_cli"
path = "src/lib.rs"

[[bin]]
name = "akua"
path = "src/main.rs"

# Runs at build time to AOT-compile the render-worker .wasm into a
# platform-specific .cwasm. Module::deserialize at run time is a
# memcpy + fixup; Module::new would spend seconds in Cranelift per
# startup.
build = "build.rs"

[features]
# Pass-through gates mirroring akua-core. Lets call-sites in the CLI
# tree `#[cfg(feature = "cosign-verify")]` their own bits (e.g. the
# attestation chain walker in `akua verify`) rather than leaking the
# toggle through the core-only feature.
default = ["oci-fetch", "cosign-verify", "dev-watch"]
oci-fetch = ["akua-core/oci-fetch"]
cosign-verify = ["akua-core/cosign-verify"]
dev-watch = ["akua-core/dev-watch", "dep:ctrlc"]

[dependencies]
akua-core = { path = "../akua-core", default-features = false, features = ["engine-kcl", "engine-helm", "engine-kustomize", "git-fetch"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
# `akua dev` SIGINT handler. Lightweight, zero transitive deps beyond
# libc. Feature-gated under `dev-watch` so headless builds don't
# pull it.
ctrlc = { version = "3", optional = true }

# Phase 4: per-render sandbox. Version pinned to 43.x matching
# engine-host-wasm so a single Engine/Module/Store shape can cross
# crate boundaries without compat-hash drift.
wasmtime = "43"
wasmtime-wasi = "43"

[build-dependencies]
# build.rs AOT-compiles the render-worker .wasm into a .cwasm. Must
# use the same wasmtime version + Config shape as the runtime host
# or Module::deserialize fails the compat-hash check.
wasmtime = "43"

[dev-dependencies]
tempfile = "3"
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "std", "pem"] }
rand = "0.8"
