[package]
name = "akua-cli"
description = "Akua command-line tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "akua_cli"
path = "src/lib.rs"

[[bin]]
name = "akua"
path = "src/main.rs"

# Runs at build time to AOT-compile the render-worker .wasm into a
# platform-specific .cwasm. Module::deserialize at run time is a
# memcpy + fixup; Module::new would spend seconds in Cranelift per
# startup.
build = "build.rs"

[features]
# Pass-through gates mirroring akua-core. Lets call-sites in the CLI
# tree `#[cfg(feature = "cosign-verify")]` their own bits (e.g. the
# attestation chain walker in `akua verify`) rather than leaking the
# toggle through the core-only feature.
default = ["oci-fetch", "cosign-verify", "dev-watch"]
oci-fetch = ["akua-core/oci-fetch"]
cosign-verify = ["akua-core/cosign-verify"]
dev-watch = ["akua-core/dev-watch", "dep:ctrlc"]
# SDK type emission — off by default. `ts-export` turns on ts-rs
# derives so the CLI contract + verb response types can be emitted
# as TypeScript sources. `schema-export` does the same for
# schemars (JSON Schema). Both are build-time only; zero cost in
# production builds. Trigger via the emission test at
# `cargo test -p akua-cli --features schema-export,ts-export`.
ts-export = ["akua-core/ts-export", "dep:ts-rs"]
schema-export = ["akua-core/schema-export", "dep:schemars"]

[dependencies]
akua-core = { path = "../akua-core", default-features = false, features = ["engine-kcl", "engine-helm", "engine-kustomize", "git-fetch"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
# `akua dev` SIGINT handler. Lightweight, zero transitive deps beyond
# libc. Feature-gated under `dev-watch` so headless builds don't
# pull it.
ctrlc = { version = "3", optional = true }

# SDK type-emission deps. Optional; pulled in only when the
# `ts-export` / `schema-export` features are enabled.
ts-rs = { version = "12", optional = true }
schemars = { version = "1", optional = true }

# Phase 4: per-render sandbox. Single wasmtime Engine shared with
# engine-host-wasm (helm, kustomize) — one Config, one Engine, many
# Stores — matching the wasmtime docs' canonical pattern. Nested
# Engines trip process-global trap-handler TLS; avoid.
wasmtime = "43"
wasmtime-wasi = "44"
engine-host-wasm = { path = "../engine-host-wasm" }

[build-dependencies]
# build.rs AOT-compiles the render-worker .wasm into a .cwasm. Must
# use the same wasmtime version + Config shape as the runtime host
# or Module::deserialize fails the compat-hash check. Uses
# engine-host-wasm::shared_config so Config matches runtime exactly.
wasmtime = "43"
engine-host-wasm = { path = "../engine-host-wasm" }

[dev-dependencies]
tempfile = "3"
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "std", "pem"] }
rand = "0.8"
# For tests/sandbox_nested_wasmtime.rs — call helm directly to
# verify the direct path works, then through the bridge to verify
# the nested path. Only pulled in for test builds.
helm-engine-wasm = { path = "../helm-engine-wasm" }
