[package]
name = "akua-core"
description = "Akua core library: lockfile/manifest parsers, Package.k loader, render output writer, CLI contract primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["engine-kcl", "engine-helm", "engine-kustomize", "oci-fetch", "git-fetch", "cosign-verify", "dev-watch", "precompile-engines", "embed-engines"]
# `precompile-engines` (default on): forwards to the engine shim
# crates' `precompile` features. With it OFF, helm/kustomize embed
# source `.wasm` and JIT at first call — used by the napi
# distribution to keep binary size manageable.
precompile-engines = [
    "helm-engine-wasm?/precompile",
    "kustomize-engine-wasm?/precompile",
]
# `embed-engines` (default on): forwards to the engine shim crates'
# `embed-engines` features. With it OFF, the engine wasm bytes
# aren't `include_bytes!`-ed — the consumer must point
# `AKUA_NATIVE_ENGINES_DIR` at a directory holding the engine
# files. Set OFF on the napi build so the 7 per-platform
# `@akua-dev/native-*` packages don't each duplicate ~93 MB of
# engine bytes; ships once via `@akua-dev/native-engines`. See #482.
embed-engines = [
    "helm-engine-wasm?/embed-engines",
    "kustomize-engine-wasm?/embed-engines",
]
# SDK type emission — off by default. `ts-export` makes the CLI
# contract types `derive(ts_rs::TS)` so they can be exported as TS
# sources for `@akua-dev/sdk`. `schema-export` does the same for
# schemars (JSON Schema bundle). Both are build-time only; zero
# cost in production builds. Triggered by the emission test in
# akua-cli (`cargo test -p akua-cli --features schema-export,ts-export`).
ts-export = ["dep:ts-rs"]
schema-export = ["dep:schemars"]
# KCL engine — native Rust via kcl-lang/lib (git dep).
engine-kcl = ["dep:kcl-lang", "dep:sha2", "dep:tempfile"]
# Embedded Helm v4 template engine. Go source in crates/helm-engine-wasm/
# compiled to wasm32-wasip1, hosted via wasmtime. No shell-out: CLAUDE.md
# "Sandboxed by default. No shell-out, ever."
engine-helm = ["dep:helm-engine-wasm"]
# Embedded kustomize engine. Same shape as engine-helm — Go source in
# crates/kustomize-engine-wasm/ compiled to wasip1.
engine-kustomize = ["dep:kustomize-engine-wasm"]
# OCI chart fetch. Pulls Helm charts from registries (ghcr.io,
# registry-1.docker.io, public-only for now). Synchronous reqwest
# client — no tokio runtime injection into the render path. Disable
# for offline-only builds (lockfile-only, no resolution against
# remote registries).
oci-fetch = ["dep:reqwest", "dep:flate2", "dep:tar", "dep:base64"]
# Git chart fetch. Pulls charts hosted in git repos via `gix` (pure
# Rust, no shell-out). Disabled by default — the dep tree is large
# and the feature is opt-in for ops who actually use git charts.
# Public HTTPS + file:// URLs supported; ssh:// + private-repo auth
# are follow-ups.
git-fetch = ["dep:gix"]
# Cosign keyed signature verification. Pairs with oci-fetch: when a
# public key is configured, the pull path also pulls the chart's
# cosign `.sig` sidecar and verifies the signature before handing
# the blob to the renderer. Phase 6 slice A — keyless (fulcio/rekor)
# is deferred.
cosign-verify = ["oci-fetch", "dep:p256", "dep:pem", "dep:signature", "dep:pkcs8"]
# File-watch hot-reload. `akua dev` watches the workspace + re-renders
# on change. Feature-gated so headless / CI builds skip the `notify`
# dep tree (inotify/kqueue platform glue).
dev-watch = ["engine-kcl", "dep:notify", "dep:notify-debouncer-mini"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

# Render-path deps — available on all targets (wasm32 included).
# Spike at docs/spikes/kcl-wasm-feasibility.md proved compile is
# clean; the workspace's `[patch."https://github.com/kcl-lang/kcl"]`
# pin to cnap-tech/kcl#akua-wasm32 fixes the runtime `current_dir()`
# panic. Worker at crates/akua-render-worker/ depends on akua-core +
# engine-kcl compiled to wasip1 — that's how Phase 4 delivers the
# sandbox.
kcl-lang = { git = "https://github.com/kcl-lang/lib", optional = true }
sha2 = { version = "0.10", optional = true }
tempfile = { version = "3", optional = true }

# SDK type-emission deps. Optional; pulled in only when the
# `ts-export` / `schema-export` features are enabled.
ts-rs = { version = "12", optional = true }
schemars = { version = "1", optional = true }

# Host-only deps — compiled into the CLI binary that *hosts* the
# render worker, not into the worker itself. Stay gated off wasm32:
#   - helm/kustomize engine hosts run wasmtime inside wasmtime.
#   - reqwest/gix need TCP which wasip1 doesn't have.
#   - cosign crypto + dev-watch filesystem notifiers are host-level.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
helm-engine-wasm = { path = "../helm-engine-wasm", optional = true, default-features = false }
kustomize-engine-wasm = { path = "../kustomize-engine-wasm", optional = true, default-features = false }

# OCI chart fetch. `rustls-tls` avoids the openssl dep chain.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
base64 = { version = "0.22", optional = true }
# `blocking-http-transport-reqwest-rust-tls` reuses the reqwest stack
# we already pull in for oci-fetch; `max-performance-safe` keeps
# compile time reasonable (skips `zlib-ng` optional perf wins).
gix = { version = "0.66", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "max-performance-safe", "worktree-mutation"], optional = true }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "std", "pem", "pkcs8"], optional = true }
pkcs8 = { version = "0.10", default-features = false, features = ["pem", "pkcs5", "encryption", "alloc"], optional = true }
pem = { version = "3", optional = true }
signature = { version = "2", optional = true }
notify = { version = "6", optional = true }
notify-debouncer-mini = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
tempfile = "3"
# cosign test fixtures generate a keypair per test run; keeps tests
# hermetic instead of committing a PEM to the repo.
rand = "0.8"
# Local HTTP mock for OCI registry tests — hosts a tiny distribution-API
# endpoint on `http://127.0.0.1:<port>` so push/pull paths exercise the
# full transport without a real registry.
httpmock = "0.7"
# Pure-Rust OCI client. Dev-only — used to *parse* the manifest bytes
# our pusher PUTs and assert spec compliance via a real OCI parser
# (independent verification that we're not just round-tripping our own
# serializer). No runtime use; we don't make any HTTP calls with it.
oci-client = { version = "0.11", default-features = false, features = ["rustls-tls"] }
