[package]
name = "akua-render-worker"
description = "Sandboxed render path — `akua render` target compiled to `wasm32-wasip1` and hosted inside the akua-cli wasmtime."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Binary target — akua-cli instantiates this as a wasmtime module and
# invokes `_start`. Native builds compile + run the same path for
# quick local iteration; wasip1 builds produce the shipping artifact.
[[bin]]
name = "akua-render-worker"
path = "src/main.rs"

[dependencies]
# Scaffold phase: just serde. The akua-core + engine-kcl integration
# is held up on a narrow kcl-driver fix (current_dir() panic on
# wasm32). See docs/spikes/kcl-wasm-feasibility.md + Phase 4 step 2
# note. Once kcl-driver's `get_pkg_list` is cfg-guarded / patched,
# the worker flips back to depending on akua-core and grows a Render
# request variant.
serde = { workspace = true }
serde_json = { workspace = true }
