[package]
name = "akua-render-worker"
description = "Sandboxed render path — `akua render` target compiled to `wasm32-wasip1` and hosted inside the akua-cli wasmtime."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Binary target — akua-cli instantiates this as a wasmtime module and
# invokes `_start`. Native builds compile + run the same path for
# quick local iteration; wasip1 builds produce the shipping artifact.
[[bin]]
name = "akua-render-worker"
path = "src/main.rs"

[dependencies]
# Render path via akua-core with only engine-kcl. No engine hosts,
# no OCI fetch, no cosign, no dev-watch — those are host-CLI
# concerns. Plugin callouts from KCL to engines + the chart
# resolver will wire through wasmtime imported host functions in a
# later slice; today's worker supports pure-KCL Packages (no
# charts.* imports, no helm.template / kustomize.build).
#
# kcl-driver's wasm32 current_dir() panic is patched via the
# workspace-root `[patch."https://github.com/kcl-lang/kcl"]` block
# pointing at cnap-tech/kcl#akua-wasm32. See
# docs/spikes/kcl-wasm-feasibility.md for the story.
akua-core = { path = "../akua-core", default-features = false, features = ["engine-kcl"] }
serde = { workspace = true }
serde_json = { workspace = true }
