[package]
name = "akua-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# Phase 4B: minimal JS-facing surface for `@akua-dev/sdk`. Exports a
# `render()` function that evaluates pure-KCL Packages inside the
# browser / Node / Deno / Bun via `wasm-bindgen`. Engine callouts
# (`helm.template`, `kustomize.build`) are not yet wired — Packages
# that import them fail with a typed error pointing at the CLI.
# Target is `wasm32-unknown-unknown`, NOT `wasm32-wasip1`: the SDK
# runs in environments without a WASI host.

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core render path. We pull only the engine-kcl feature and skip
# everything wasip1-only (filesystem, process, cosign, oci).
akua-core = { path = "../akua-core", default-features = false, features = ["engine-kcl"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = "0.2"

# KCL spike finding: `uuid` uses `getrandom` which needs the `js`
# backend on wasm32-unknown-unknown. Opt-in here so the dep graph
# resolves a compatible `getrandom` feature.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["js"] }
uuid = { version = "1", features = ["js", "v4"] }
# `instant` defaults to an `env::now` extern on wasm32; the
# `wasm-bindgen` feature makes it use `Date.now()` instead — no
# host-provided extern required, works in any JS runtime.
instant = { version = "0.1", features = ["wasm-bindgen"] }
# Same story for `chrono` — the `wasmbind` feature routes
# clock calls through `js-sys::Date` instead of an env extern.
chrono = { version = "0.4", default-features = false, features = ["wasmbind"] }

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

# wasm-pack ships a bundled `wasm-opt` that rejects bulk-memory ops,
# which current Rust emits unconditionally. Skip the optimizer here;
# the release-profile LTO still produces a tight bundle, and the
# final JSR artifact will be opt'd via a newer `wasm-opt` in CI.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
